config-root/namespaces/jx-staging/nodey544/nodey544-nodey544-deploy.yaml
# Source: nodey544/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey544-nodey544
  labels:
    draft: draft-app
    chart: "nodey544-1.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey544-nodey544
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey544-nodey544
    spec:
      serviceAccountName: nodey544-nodey544
      containers:
        - name: nodey544
          image: "gcr.io/jenkins-x-labs-bdd/nodey544:1.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
