config-root/namespaces/jx-staging/nodey544/nodey544-ingress.yaml
# Source: nodey544/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey544
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey544
              servicePort: 80
      host: nodey544-jx.34.105.200.93.nip.io
